--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.5",
     "@heroicons/react": "^2.1.5",
     "framer-motion": "^11.3.29",
     "react": "^18.3.1",
